# AniBot

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: main.rs
src/anilist/: models.rs  query.rs
src/commands/: lookup.rs  mod.rs  ping.rs
