[package]
name = "anibot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["json"] }
