[package]
name = "anibot"
version = "0.1.0"
edition = "2024"
description = "A discord bot for searching AniList for anime and manga."
repository = "https://github.com/Skittyblock/anibot"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
